# aegiuw

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  package.json  rust-toolchain.toml
.github/workflows/: rust.yml  worker.yml
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: lib.rs  risk.rs  sni.rs
crates/aegis-core/src/heuristics/: context.rs  levenshtein.rs  mod.rs
crates/aegis-daemon/: Cargo.toml
crates/aegis-daemon/src/: main.rs
crates/aegiuw-core/: Cargo.toml
crates/aegiuw-core/benches/: sni.rs
crates/aegiuw-core/fuzz/: Cargo.toml  README.md
crates/aegiuw-core/fuzz/fuzz_targets/: differential_rustls.rs  extract_sni.rs  parse_handshake_message.rs  reassemble_handshake.rs
crates/aegiuw-core/src/: fingerprint.rs  lib.rs  risk.rs  sni.rs
crates/aegiuw-core/src/heuristics/: context.rs  levenshtein.rs
crates/aegiuw-daemon/: Cargo.toml
crates/aegiuw-daemon/src/: main.rs
crates/aegiuw-sni-inspect/: Cargo.toml
crates/aegiuw-sni-inspect/src/: lib.rs  main.rs
docs/: DECISIONS.md  PRD.md  ROADMAP.md  quality-gates.md
docs/diagrams/: layer1-2-capture-and-scoring.md
hooks/: pre-commit  pre-push
scripts/: fuzz-soak.sh  miri.sh  mutants.sh  wasm-check.sh
scripts/quality/: cache.mjs  exec.mjs  filter.mjs  git.mjs  install-hooks.mjs  output.mjs  registry.mjs  runner.mjs  triggers.mjs
scripts/quality/__tests__/: cache.test.mjs  filter.test.mjs  gates.test.mjs  registry.test.mjs  triggers.test.mjs
scripts/quality/gates/: secrets.mjs  spdx.mjs
scripts/wireshark/: README.md  aegiuw-sni-dissector.lua
workers/aegis-router/: package-lock.json  package.json  tsconfig.json  wrangler.jsonc
workers/aegis-router/src/: index.ts
workers/aegiuw-router/: package-lock.json  package.json  wrangler.jsonc
workers/aegiuw-router/src/: index.ts
