# Workspace root for the Aegiuw local agent.
#
# `aegis-core`  — pure, dependency-light risk logic (no I/O, no OS calls).
#                 Unit-testable and WASM-friendly so the same logic can later
#                 run inside the Cloudflare Worker.
# `aegis-daemon`— the privileged background binary (TUN interface, SNI fork,
#                 daemonization). Depends on aegis-core.
[workspace]
resolver = "2"
members = [
    "crates/aegis-core",
    "crates/aegis-daemon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/aegis-security/aegiuw"
authors = ["The Aegiuw Authors"]
rust-version = "1.82"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"

# Slightly smaller, faster release binaries for distribution via brew/cargo.
[profile.release]
lto = "thin"
codegen-units = 1
strip = true
