[package]
name = "aegiuw-core"
description = "Pure, dependency-light risk heuristics for the Aegiuw local agent (Levenshtein typo-squat detection, launch-context classification, SNI parsing, and risk verdicts)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde = { workspace = true }
# Structured observability for the SNI parser (SNI backlog O1). `tracing` is
# the de-facto Rust observability framework; emitting events here lets the
# daemon's Layer-1 subscriber pick them up without coupling the parser to
# any specific exporter.
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
# Property testing for the SNI parser (SNI backlog S2). Complements the
# cargo-fuzz harnesses by running on every `cargo test` rather than on
# nightly-only external invocations.
proptest = "1"
