[package]
name = "aegiuw-core"
description = "Pure, dependency-light risk heuristics for the Aegiuw local agent (Levenshtein typo-squat detection, launch-context classification, SNI parsing, and risk verdicts)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"

[features]
# SNI backlog P6: `std` is default-on for the daemon and any other host-OS
# consumer. Disable it (`--no-default-features`) to compile against
# `core + alloc` only — used for WASM-on-Worker builds where smaller bundle
# size and a leaner runtime are preferred. Disabling `std` drops the
# `duration_us` field from the `extract_sni` trace event (Instant is
# std-only); everything else stays available.
default = ["std"]
std = []
# SNI backlog O4: when enabled, the parser emits a `tracing::debug!` event
# with a hex dump of the first 64 bytes of any `Malformed` input. Off by
# default — opt-in for forensic analysis runs because Malformed bytes are
# attacker-controlled and may contain unwanted strings if logs are later
# scraped for keywords.
debug-malformed = []

[dependencies]
# serde with no_std-compatible defaults so the crate compiles under
# `--no-default-features` (P6). The `alloc` feature pulls in serde's
# `String`/`Vec` impls; the `derive` macro is unchanged. Re-enable serde's
# `std` impls implicitly via our own `std` feature if a downstream needs
# them (the macros work either way for our SniOutcome shape).
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
# Structured observability for the SNI parser (SNI backlog O1). `tracing` is
# the de-facto Rust observability framework; emitting events here lets the
# daemon's Layer-1 subscriber pick them up without coupling the parser to
# any specific exporter. `default-features = false` keeps it no_std-compatible.
tracing = { version = "0.1", default-features = false }
# SNI backlog P5: byte-search primitive with SIMD inside (no unsafe for the
# caller, per-target dispatch handled by the crate). Used in
# `parse_server_name_extension` to find dot positions for the label-length
# check. `default-features = false` keeps it no_std-compatible.
memchr = { version = "2", default-features = false }
# SNI backlog F1: JA3 fingerprint uses MD5 (per the original 2017 paper).
# RustCrypto's no_std-friendly md-5; `default-features = false` keeps the
# crate compatible with our P6 no_std build.
md-5 = { version = "0.10", default-features = false }

[dev-dependencies]
# Property testing for the SNI parser (SNI backlog S2). Complements the
# cargo-fuzz harnesses by running on every `cargo test` rather than on
# nightly-only external invocations.
proptest = "1"
# Benchmarks (SNI backlog P3). Run with `cargo bench -p aegiuw-core`.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "sni"
harness = false
